--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "0201-annotation-inference",
+  "name": "typescript-estudos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
